Grease Pencil merge down layer misses some frames #104514

Closed
opened 2023-02-09 14:18:34 +01:00 by Amélie Fondevilla · 2 comments

System Information
Operating system: Linux-5.4.0-137-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.47.03

Blender Version
Broken: version: 3.5.0 Alpha
Worked: not that I know of

Short description of error
Using layer "Merge Down" operation sometimes changes the animation.

It happens when we try to merge down the layers in the setup of the following image.
Capture d’écran du 2023-02-09 11-08-35.png

While merging Layer_1 > Layer_2, the strokes of Layer_1,frame 1 get lost at frame 2.

This issue is related to a previous bug (#104371) but is not a duplicate of it.

Exact steps for others to reproduce the error
You can try merging down the layers in this blender file : bug_mergedown-2.blend.
See that the strokes drawn at frame 1 on layer 1 are lost in the frames 2 and further in the resulting merge layer.

**System Information** Operating system: Linux-5.4.0-137-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.47.03 **Blender Version** Broken: version: 3.5.0 Alpha Worked: not that I know of **Short description of error** Using layer "Merge Down" operation sometimes changes the animation. It happens when we try to merge down the layers in the setup of the following image. ![Capture d’écran du 2023-02-09 11-08-35.png](/attachments/32f881ad-0357-4ab6-844b-0289d882a7be) While merging Layer_1 > Layer_2, the strokes of Layer_1,frame 1 get lost at frame 2. This issue is related to a previous bug (https://projects.blender.org/blender/blender/issues/104371) but is not a duplicate of it. **Exact steps for others to reproduce the error** You can try merging down the layers in this blender file : [bug_mergedown-2.blend](/attachments/e5e1ab04-2355-47bc-9c13-1992a619c771). See that the strokes drawn at frame 1 on layer 1 are lost in the frames 2 and further in the resulting merge layer.
Amélie Fondevilla added the
Type
Report
Priority
High
Status
Needs Triage
labels 2023-02-09 14:18:34 +01:00
Falk David added this to the Grease Pencil project 2023-02-09 14:26:06 +01:00
Member

Fine to associate a Project, but we should also make sure we have the Module label set

Fine to associate a Project, but we should also make sure we have the Module label set
Philipp Oeser added the
Module
Grease Pencil
label 2023-02-09 14:50:51 +01:00
Member

Would also assume this is confirmed

Would also assume this is confirmed
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-02-09 14:51:24 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-10 12:55:10 +01:00
Antonio Vazquez removed this from the Grease Pencil project 2023-03-21 16:06:00 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104514
No description provided.